# OpenCVBinaries

./: .gitignore  CMakeLists.txt  README.md  make_binaries.cmd
demo/: CMakeLists.txt  main.cpp
